fix: more numbers, remove gap in app, conect counters google and ynadex

--- a/src/globals/Footer/Footer.css
+++ b/src/globals/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
     padding-bottom: 57px;
+    padding-top: 60px;
 }
 
 .footer__socials {
